--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -8,22 +8,23 @@ There are currently no known incompatibilities with any vehicle or vehicle featu
 
 = Vehicles Tested =
 OpenEVSE Plus has been tested with:
-|| Year || Make || Model || Car Specific Features || Onboard Charger || Known Issues ||
-||2013|| BMW ||Active E ||Timers - Supported || ||
-|| All || Chevy || VOLT || Timers - Supported || 3.3kW - 16A @ 240V || None ||
-||2014|| Chevy || Spark ||Timers - Supported || 3.3kW - 16A @240V ||None||
-|| All || Ford || Focus EV || || 6.6kw - 30A @ 240V || None ||
-|| 2013 || Ford || C-Max Energi || Timers - Supported || 3.3kW - 16A @ 240V || None ||
-|| 2012 || Fisker || Karma || || 3.3kW - 16A @ 240V || None ||
-|| 2013 || Honda || Fit || || 6.6kw - 30A @ 240V || None ||
-|| All || Mitsubishi || i-MiEV || || 3.3kW - 16A @ 240V || None ||
-|| All || Nissan || LEAF || Timers - Supported || 6.6kW - 32A @ 240V || None ||
-|| 2013 || Renault || Zoe || || || None ||
-|| All || Tesla || Roadster || with J1772 adapter || 16.8kW - 70A @ 240V || None ||
-|| All || Tesla || Model S || with J1772 adapter || 10kW - 40A @ 240V or 20kw - 80A @ 240V || None ||
-|| 2011 || TH!NK || City EV || || 3.3kW - 16A @ 240V || None ||
-|| All || Toyota|| PiP || Timers - Supported || 2.8kW - 12A @ 240V || None ||
-|| All || Toyota || Rav4 EV || || 10kw - 40A @240V || None ||
+|| Make || Model || Car Specific Features || Onboard Charger || Known Issues ||
+|| BMW ||Active E ||Timers - Supported || ||
+|| Chevy || VOLT || Timers - Supported || 3.3kW - 16A @ 240V || None ||
+|| Chevy || Spark ||Timers - Supported || 3.3kW - 16A @240V ||None||
+|| Ford || Focus EV || || 6.6kw - 30A @ 240V || None ||
+|| Ford || C-Max Energi || Timers - Supported || 3.3kW - 16A @ 240V || None ||
+|| Fisker || Karma || || 3.3kW - 16A @ 240V || None ||
+|| Honda || Fit || || 6.6kw - 30A @ 240V || None ||
+|| Mitsubishi || i-MiEV || || 3.3kW - 16A @ 240V || None ||
+|| Nissan || LEAF || Timers - Supported || 6.6kW - 32A @ 240V || None ||
+|| Renault || Zoe || || 7.5kw 32A @ 230v || None ||
+|| Tesla || Roadster || with J1772 adapter || 16.8kW - 70A @ 240V || None ||
+|| Tesla || Model S || with J1772 adapter || 10kW - 40A @ 240V or 20kw - 80A @ 240V || None ||
+|| TH!NK || City EV || || 3.3kW - 16A @ 240V || None ||
+|| Toyota|| PiP || Timers - Supported || 2.8kW - 12A @ 240V || None ||
+|| Toyota || Rav4 EV || || 10kw - 40A @240V || None ||
+|| Smart || ForTwo ED || || 3.3kw 16A @ 230v || None ||
 
 
 
