--- a/wiki/OpenEVSE_DIY_LCD_spec.wiki
+++ b/wiki/OpenEVSE_DIY_LCD_spec.wiki
@@ -50,7 +50,14 @@ http://worrydream.com/ResistorDecoder/resistors.pdf
 [http://mightyohm.com/files/soldercomic/FullSolderComic_EN.pdf http://mightyohm.com/blog/wp-content/uploads/2011/04/FullSolderComic_EN_Page_1_resized.png]
 
 
-Coming Soon
+==Assembly==
+http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9091_1024x1024.jpg 
+ 
+  * Solder the .1" 4-pin header to the i2c connector (If your board has two use the connector on the left).
+  * Optional - Solder a 3 pin header on the S - Row for use with a button switch.
+
+[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9092_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9092_medium.jpg]
+
 
 
 This evaluation board/kit is intended for use for ENGINEERING DEVELOPMENT, DEMONSTRATION, OR EVALUATION PURPOSES ONLY and is not considered to be a finished end-product fit for general consumer use.
