Edited wiki page OpenEVSE_DIY_LCD_spec through web user interface.

--- a/wiki/OpenEVSE_DIY_LCD_spec.wiki
+++ b/wiki/OpenEVSE_DIY_LCD_spec.wiki
@@ -92,6 +92,7 @@ http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9091_1024x1024.jpg
 
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9102_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9102_medium.jpg]
 
+===Liquid Crystal Display LCD===
 
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9103_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9103_medium.jpg]
 
