--- a/wiki/OpenEVSE_DIY_LCD_spec.wiki
+++ b/wiki/OpenEVSE_DIY_LCD_spec.wiki
@@ -69,6 +69,8 @@ http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9091_1024x1024.jpg
 
   * Solder the 220 Ohm resistor in positions R1 and the 330 Ohm resistors in R2 and R3. Trim the excess lead.
 
+  * Place the MPC23017 Integrated circuit in the position labeled IC1 in the correct orientation. Solder in place.
+
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9095_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9095_medium.jpg]
 
   * Solder the trim pot in the position labeled "CONTRAST". 
@@ -91,14 +93,14 @@ http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9091_1024x1024.jpg
   * Place the 1307 Integrated circuit in the position labeled IC2 noting the correct oriantation.
   * Solder in place and trim excess leads.  
  
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9099_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9099_medium.jpg]
-
 
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9100_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9100_medium.jpg]
 
-
+  * Flow solder to form a small bump on the center terminal of the battery holder.
+ 
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9101_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9101_medium.jpg]
 
+  * Solder the battery holder.
 
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9102_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9102_medium.jpg]
 
