Edited wiki page OpenEVSE_DIY_LCD_spec through web user interface.

--- a/wiki/OpenEVSE_DIY_LCD_spec.wiki
+++ b/wiki/OpenEVSE_DIY_LCD_spec.wiki
@@ -57,6 +57,8 @@ http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9091_1024x1024.jpg
   * Optional - Solder a 3 pin header on the S - Row for use with a button switch.
   * Flip the board over and trim the excess leads
 
+<b><font color=blue>Tip </font></b> - Click on Photos in this guide for larger versions.
+
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9092_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_9092_medium.jpg]
 
   * Solder the 2 4.7k resistors in positions R4 and R5. Trim excess leads.
