--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -2,7 +2,7 @@
 
 
 =OpenEVSE PLUS - DIY Kit=
-The DIY OpenEVSE Plus can but built from a kit available at the OpenEVSE Store or from scratch by sourcing your own board from the source files and components.
+The DIY <b><font color=teal> Open</font></b>*EVSE* Plus can but built from a kit available at the <b><font color=teal> Open</font></b>*EVSE* Store or from scratch by sourcing your own board from the source files and components.
 
 The kit is avaliable here:
 https://openevse-store.myshopify.com/products/diy-openevse-plus-v2
