--- a/wiki/LoadingFirmware.wiki
+++ b/wiki/LoadingFirmware.wiki
@@ -6,15 +6,16 @@ Loading firmware to the OpenEVSE requires an ISP. There are many AVR/Arduino com
 https://openevse-store.myshopify.com/collections/frontpage/products/openevse-programmer
 
 = Firmware =
-The latest firmware is located on a Github maintained by lincomatic. 
-https://github.com/lincomatic/open_evse 
+The latest firmware is located in the Downloasd Section:
+https://code.google.com/p/open-evse/downloads/list
 
 
 == Arduino IDE ==
-If you wish to modify the source code than the Arduino IDE is a good choice. It includes an code editor, serial monitor, and will compile and upload your code to the OpenEVSE.
+The Arduino IDE includes an code editor, serial monitor, and will compile and upload your code to the OpenEVSE.
 http://arduino.cc/en/Main/Software
 
-In your Arduino installation, you'll find a file somewhere called "boards.txt". You need to add this section to the end:
+
+In the Arduino Software you can select the Arduino UNO in the Tools - Boards menu or add a custom entry for OpenEVSE. To ass a custom board go to your Arduino installation folder, the "boards.txt" should be in the sub folder hardware\arduino. You can use the Arduino Uno option or add this section to the end for a custom OpenEVSE option:
 
 {{{
 ##############################################################
@@ -97,7 +98,7 @@ To finish setting up your Arduino IDE you will need to insure any required libra
 
 OpenEVSE has two types of libraries those that will always be required and those that are only required if you enable a certain feature.
 
-The only library below not included in the basic Arduino installation is Time.h. More info on the Time library can be found here: http://arduino.cc/playground/Code/Time 
+The library below not included in the basic Arduino installation is Time.h. More info on the Time library can be found here: http://arduino.cc/playground/Code/Time 
 
 {{{
 #include <EEPROM.h>
@@ -112,7 +113,7 @@ The only library below not included in the basic Arduino installation is Time.h.
 #endif // ARDUINO
 }}}
 
-Some features if enabled will also require a library, a good example is the Adafruit RGB LCD or the Adafruit i2c backpack.
+Some features if enabled will also require a library, a good example is the , RTC, RGB LCD or the Adafruit i2c backpack.
 
 {{{
 #ifdef RGBLCD //Adafruit RGB LCD
