--- a/wiki/AVRDUDE.wiki
+++ b/wiki/AVRDUDE.wiki
@@ -30,7 +30,9 @@ run cmd for the command prompt.
 type "C:\OpenEVSE"
 from the C:\OpenEVSE folder run the following command:
 
-Command assumes you are using the OpenEVSE USBasp programmer, if using another programmer substitute the correct programmer after -c
+Command assumes you are using the OpenEVSE USBasp programmer, if using another programmer substitute the correct programmer after -c for a list of programmers see:http://www.nongnu.org/avrdude/user-manual/avrdude_4.html
+
+Note: some hex files compiled with special features may have a different file name such as open_evse20B7_RTC.hex. If youf file name is different modify the file name portion after "flash:w:"
 {{{
 avrdude -c USBasp -p m328p -U flash:w:open_evse.hex
 }}}
